deploy/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-dev
  labels:
    app.kubernetes.io/part-of: assignment
    environment: dev
